<resources>
    <string name="app_name">OracleApp</string>
    <string name="menu">Menu</string>
    <string name="ask_a_question">question</string>
    <string name="exit">exit</string>
    <string name="settings">settings</string>
    <string name="settings_name">Settings</string>
    <string name="version">Version: 0.1</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="enter_date">Birthday</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="save">save</string>
    <string name="get_answer">get answer</string>
    <string name="question_title">Question</string>
    <string name="write_your_question">Write your question</string>
    <string name="warning">You must fill all fields</string>
    <string name="settings_warning">You must fill the settings form!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="maybe">Maybe</string>
    <string name="likely">Likely</string>
    <string name="unlikely">Unlikely</string>
    <string name="noanswer">No answer</string>
</resources>