<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/padding_container">


    <TextView
        android:id="@+id/textViewMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/askButton" />


    <Button
        android:id="@+id/askButton"
        android:layout_width="@dimen/c_width"
        android:layout_height="@dimen/c_height"
        android:text="@string/ask_a_question" />

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="@dimen/c_width"
        android:layout_height="@dimen/c_height"
        android:text="@string/settings" />

    <Button
        android:id="@+id/exitButton"
        android:layout_width="@dimen/c_width"
        android:layout_height="@dimen/c_height"
        android:text="@string/exit" />


</LinearLayout>